--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,38 +1,179 @@
-@import-normaliza;
+@import-normalize;
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 
-/* * {
+:root {
+  --primary-color: hsl(0, 0%, 17%);
+  --secondary-color: hsl(0, 0%, 59%);
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-} */
-
-.map,
-.map-placeholder {
-  width: 100vw;
-  height: 100vh;
 }
 
-.btn {
-  background: none;
-  background-color: black;
+body {
+  font-family: 'Rubik', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+li {
+  list-style: none;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  background: #f4f4f4;
+  min-height: 100vh;
+}
+
+.header {
+  height: 40vh;
+  background: url('../images/pattern-bg.png') no-repeat left top;
+}
+
+.container {
+  max-width: 1100px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  margin-top: 3rem;
+  padding: 0 1rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-title {
+  color: #fff;
+  font-weight: 500;
+  font-size: 2rem;
+  line-height: 0;
+}
+
+.address-form {
+  position: relative;
+  max-width: 550px;
+  width: 100%;
+  margin: 1.5rem 0;
+  margin-bottom: 2.5rem;
+  height: 3rem;
+
+  display: flex;
+  align-items: center;
+}
+.address-form .input {
+  flex: 1;
+  height: 100%;
+  padding: 1rem;
+  font: inherit;
   border: none;
   outline: none;
-  cursor: pointer;
-  padding: 0.5rem 1rem;
+  border-radius: 1rem 0 0 1rem;
 }
 
-form {
-  position: relative;
+.address-form .btn {
+  background: none;
+  background-color: var(--primary-color);
+  padding: 1rem;
+  height: 100%;
+
+  outline: none;
+  border: none;
+  border-radius: 0 1rem 1rem 0;
+  cursor: pointer;
 }
 
 .error {
-  color: red;
+  font-size: 1.2rem;
+  word-spacing: 3px;
+  color: rgb(209, 20, 20);
   position: absolute;
-  bottom: -1rem;
+  top: 3.5rem;
   left: 50%;
   transform: translateX(-50%);
 }
 
+.data-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1.5rem 0;
+  border-radius: 1rem;
+  background-color: #fff;
+  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.3);
+  z-index: 100;
+}
+
+.data-container .data-item {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 5.5rem;
+  padding: 0 1.5rem;
+  border-right: 1px solid var(--secondary-color);
+}
+
+.data-container .data-item:last-child {
+  border-right: none;
+}
+
+.data-item .data-name {
+  font-size: 1rem;
+  color: var(--secondary-color);
+  text-transform: uppercase;
+}
+
+.data-item .data-content {
+  color: var(--primary-color);
+  font-weight: 700;
+  font-size: 1.35rem;
+  margin-top: 1.35rem;
+}
+
+.map-placeholder {
+  flex: 1;
+  display: flex;
+}
+
+.map {
+  flex: 1;
+  width: 100%;
+  z-index: 1;
+}
+
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.75);
+  z-index: 10000000;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .loader {
-  font-size: 3rem;
+  font-size: 8rem;
+  color: #fff;
+  animation: loading 1s ease-in-out infinite forwards;
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
